# sfml_template_cmake

./: CMakeLists.txt  README.md  main.cpp
